# MuminMate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_auth_tables.py  0002_threads.py
backend/: config.py  database.py  exceptions.py  limiter.py  logger.py  main.py  routers.py  tasks.py
backend/auth/: dependencies.py  entities.py  exceptions.py  repository.py  router.py  schemas.py
backend/auth/services/: __init__.py  _helpers.py  auth_service.py  login_flow.py  refresh_flow.py
backend/middleware/: logging_context.py
backend/tests/: conftest.py  test_auth.py  test_rate_limiting.py  test_schemas.py
backend/tests/auth/: test_helpers.py  test_router.py
backend/tests/threads/: test_router.py  test_schemas.py
backend/threads/: dependencies.py  entities.py  exceptions.py  repository.py  router.py  schemas.py  service.py
backend/views/: auth_views.py  chat_views.py
ollama/: pull.sh
static/: style.css
static/js/: api_client.js  auth.js  login.js  register.js  threads.js  ui_utils.js
templates/: base.html  chat.html  login.html  register.html
