[project]
name = "muminmate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.7.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "structlog>=26.1.0",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 100
